Added help button, maybe later will be native help.html

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Speech dictation</title>
+<div id='help' style="position:absolute; right:0; top:0;"  >
+  <a href="https://github.com/hcrlab/rws_dictation/wiki" target="_blank">Help</a>
+</div>
 <style>
   * {
     font-family: Verdana, Arial, sans-serif;
